# cereusdb

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  DEPENDENCIES.md  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
js/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
js/src/: index.ts
js/tests/: core.test.ts  ddl.test.ts  distance-join.test.ts  function-catalog.test.ts  geography.test.ts  knn.test.ts  proj.test.ts  random-geometry.test.ts  raster.test.ts  relation-join.test.ts  s2.test.ts
js/tests/support/: geo-function-cases.ts  package.ts  paths.ts  raster-function-cases.ts  run-wasm-query.mjs  test-fixtures.ts  wasm-testkit.ts
patches/: README.md
patches/georust-gdal/: 0001-wasm.patch
patches/georust-geos/: 0001-wasm.patch  0002-fix-manifest.patch  0003-use-std-ffi.patch
patches/georust-proj/: 0001-wasm.patch
patches/sedona-db/: 0001-wasm.patch  0002-embedded-proj-db-wasm.patch  0003-wasm-raster-no-tg.patch  0004-phase1-parity.patch  0005-wasm-tg-build.patch  0006-phase3-geography.patch  0007-broad-geometry-helpers.patch  0008-fix-sedona-functions-test-import.patch  0009-browser-safe-follow-on.patch  0010-sedona-testing-wasm.patch  0011-s2-wasm-vcpkg.patch  0012-sedona-extension-wasm-errno.patch
plans/: SEDONADB_WASM_PRD.md  browser-safe-follow-on-plan.md  gap-checklist.csv  gap-implementation-plan.md  optimizer-parity-note.md  runtime-surface-report.md  s2-and-random-geometry-plan.md  s2-feasibility-spike.md  website-parity-scope-note.md
rust/cereusdb/: Cargo.toml
rust/cereusdb-object-store/: Cargo.toml
rust/cereusdb-object-store/src/: lib.rs
rust/cereusdb/src/: context.rs  io.rs  lib.rs  random_geometry.rs  result.rs  s2_order.rs
scripts/: build-npm-package.mjs  build.sh  env_shim.js  generate-runtime-surface-report.mjs  patch-wasm-js.sh  prepare-patched-sources.sh  query-runtime-catalog.mjs  report-wasm-size.sh  smoke-packed-package.mjs  sync-package-versions.mjs
scripts/emscripten/: bootstrap-vcpkg.sh  build-gdal-deps.sh  build-gdal.sh  build-geos.sh  build-proj.sh  build-sqlite.sh  install-s2-vcpkg-deps.sh  spike-s2-vcpkg.sh
